# dta1d

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  dta1d.options
data/10x10/measurements/: PRF x15 MV 10x10 ssd=90 d=10cm.xls  PRF x15 MV 10x10 ssd=90 d=5cm.opab  PRF x15 MV 10x10 ssd=90 dmax.opab  PRF x15 MV 10x10 ssd=90 dmax.xls  x15 MV 10x10 ssd=90.csv  x15 MV 10x10 ssd=90.opab
data/10x10/monaco_planes/: MonacoPhantom.MasterPlan-QA7+10x10ssd90.Coronal.124.00 dmax.ALL
data/1D/170/: 170deg2x20cm_c0.3_s.csv  170deg_2x20cm_c0.0_s.csv  170deg_2x20cm_c0.1_s.csv  170deg_2x20cm_c0.2_s.csv
data/1D/65+65/: 65+65_a0.5_pomiar.csv  65+65_a0.5_pomiar_s3.csv  65+65_a0.5_pomiar_s3_buildup.csv  65+65_a1.0_pomiar.csv  65+65_a2.0_pomiar.csv  65+65_a5.0_pomiar.csv  65+65_c0.1_b0.03_a0.5.csv  65+65_c0.1_b0.03_a1.0.csv  65+65_c0.1_b0.03_a2.0.csv  65+65_c0.1_b0.03_a3.85.csv  65+65_c0.1_b0.03_a5.0.csv  65+65_c0_b0_a0.5.csv  65+65_c0_b0_a1.0.csv  65+65_c0_b0_a2.0.csv  65+65_c0_b0_a3.85.csv  65+65_c0_b0_a5.0.csv
data/OmniPro_Imrt/: 170st 1x20cm.opg
data/opg-s3-gru2016/: 65z65_a0.5.opg  65z65_a0.5_2mm_do_gory.opg  65z65_a0.5_5mm_w_dol.opg  gap_test_g90.opg
data/sample planes from OmniPro I'mRT/: Plane01 10x10  x6mv.opg
py_scripts/: conv_sigma_0.1.csv  conv_sigma_0.3.csv  conv_sigma_0.5.csv  rotating_stripe.csv  rotating_stripe.py
src/: 1D_functions.c  2D_functions.c  Makefile  Makefile.am  Makefile.in  helper_functions.c  monaco_functions.c  monaco_functions.cpp  project.c  project.cpp  project.h
(+189 files in other folders)
